[tool.poetry]
name = "hubspot-prod-to-sandbox"
version = "0.1.0"
description = "Tools for migrating prod or prod-like data from a Hubspot production instance to a Hubspot sandbox instance"
authors = ["Ross Katz <ross.katz@corrdyn.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
hubspot = "^0.1.14-alpha.0"
pandas = "^1.4.0"
mimesis = "^5.3.0"
black = "^21.12b0"
isort = "^5.10.1"
simplejson = "^3.17.6"
Delorean = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
